# mcp-asana

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md
.claude/agents/: line-app-test-specialist.md
.claude/commands/: analyze-local-changes.md  get-pr-diff.md
asana-mcp-server/: README.md  pyproject.toml
asana-mcp-server-node/: .gitignore  CLAUDE.md  README.md  jest.config.js  package-lock.json  package.json  run-with-logging.sh  tsconfig.json
asana-mcp-server-node/src/: asana.d.ts  client.ts  index.ts  server.ts  types.ts
asana-mcp-server-node/tests/: client.test.ts
asana-mcp-server/src/asana_mcp_server/: client.py  server.py
asana-mcp-server/tests/: test_client.py  test_server.py  test_server_simple.py
